--- a/halo/template/parts/domestic-card.pug
+++ b/halo/template/parts/domestic-card.pug
@@ -17,7 +17,7 @@
     .form-group
       label(for='bank') Chọn ngân hàng:&nbsp;
       select#input__bank.form-control
-        option VCB (Vietcombank)
+        option VCB (Ngân hàng TMCP Ngoại thương Việt Nam)
         option BIDV (Ngân hàng Đầu tư và Phát triển Việt Nam)
 
     .form-group
