--- a/halo/css/layout.css
+++ b/halo/css/layout.css
@@ -94,6 +94,17 @@ dl, ol, ul {
   margin: 0px;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 /* --------------- kết thúc reset css --------------- */
 
 /* Table of contents
