--- a/reset.css
+++ b/reset.css
@@ -1,5 +1,3 @@
-/* ---------- reset css ----------*/
-
 
 /* --------------- reset css --------------- */
 
@@ -11,6 +9,7 @@
 
 *:focus {
   outline-color: transparent !important;
+  box-shadow: none !important;
 }
 
 p {
@@ -71,4 +70,39 @@ img {
   max-height: 100%;
 }
 
-/* ---------- kết thúc reset css ----------*/
+.breadcrumb {
+  margin: 0px;
+  padding: 0px;
+}
+
+.container-fluid {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+
+.btn:focus {
+  box-shadow: none;
+}
+
+.page-link:focus {
+  z-index: 3;
+  outline: 0;
+  box-shadow: none;
+}
+
+dl, ol, ul {
+  margin: 0px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+/* --------------- kết thúc reset css --------------- */
