--- a/halo/template/parts/card.pug
+++ b/halo/template/parts/card.pug
@@ -10,5 +10,5 @@
       span.old-price 58.090.000đ
       span.sale-badge
         img(src='img/img--misc/badge--sale.png' alt='')
-      span.sale-amount.font-italic.font-12 (Giảm 8.000.000đ)
+      span.sale-amount.font-italic (Giảm 8.000.000đ)
     a.btn.btn--dark.seemore-btn(href='details.html') Xem chi tiết 
