--- a/halo/template/payment.pug
+++ b/halo/template/payment.pug
@@ -61,10 +61,52 @@ block content
           p.summary__grand-total.inner-header.text-center Tổng tiền hàng: 
             span 390.270.000đ
         
+        .faq.sub-section
+          h2.sub-header Đặt hàng &#38; thanh toán: câu hỏi thường gặp
+
+          .faq__item 
+            p.faq__item--question(data-toggle="collapse" data-target="#answer1") 
+              span Chi phí vận chuyển tính như thế nào?
+              span +
+            ul#answer1.faq__item--answer.collapse
+              li - Với các đơn hàng có bao gồm sản phẩm máy ảnh và ống kính bất kỳ: HALO sẽ miễn phí vận chuyển, áp dụng trên phạm vi toàn quốc.
+              li - Với các đơn hàng chỉ bao gồm phụ kiện: HALO sẽ miễn phí vận chuyển với các đơn hàng có tổng giá từ 500.000đ trở lên, áp dụng trên phạm vi toàn quốc.
+              li - Với các trường hợp còn lại, phí vận chuyển tính như sau: nội thành Hà Nội: 20.000đ, địa điểm khác: 50.000đ.
+              
+          .faq__item 
+            p.faq__item--question(data-toggle="collapse" data-target="#answer2") 
+              span Thời gian giao hàng là bao lâu?
+              span +
+            ul#answer2.faq__item--answer.collapse 
+              li - Hà Nội, TP.HCM: Giao hàng trong vòng 2 ngày
+              li - Các khu vực khác: Giao hàng trong vòng 2 - 5 ngày
+
+          .faq__item 
+            p.faq__item--question(data-toggle="collapse" data-target="#answer3") 
+              span Tôi có thể lấy mã giảm giá từ đâu?
+              span +
+            ul#answer3.faq__item--answer.collapse 
+              li - Theo dõi các chương trình tặng mã giảm giá trên các nền tảng xã hội của HALO như&nbsp;  
+                a(href="#") Facebook&nbsp; 
+                a(href="#") Instagram&nbsp;
+                | và&nbsp;
+                a(href="#") Youtube 
+              li - Các bài viết quảng bá trên các trang tin tức cũng sẽ có mã giảm giá (số lượng có hạn)
+              li - Mua hàng tại HALO và tích điểm để đổi mã giảm giá
+
+          .faq__item 
+            p.faq__item--question(data-toggle="collapse" data-target="#answer4") 
+              span Wait, the Earth is flat?
+              span -
+            ul#answer4.faq__item--answer.collapse.show 
+              li - Always has been.
+
+          h3 Các câu hỏi khác cần tư vấn, vui lòng liên hệ hotline: 012.345.6789
+
         p.term-toggler__wrapper.text-center Khi bấm xác nhận, quý khách đã đồng ý với 
           span.term-toggler.text-primary.font-italic(data-toggle="collapse" data-target="#term") các điều khoản đặt hàng và thanh toán của chúng tôi.
 
-        .confirmation__term#term.sub-section
+        .confirmation__term#term.sub-section.collapse
           h2.sub-header Điều khoản đặt hàng và thanh toán
           p 1. Quý khách hàng vui lòng cung cấp địa chỉ giao hàng cũng như thông tin người nhận rõ ràng, chính xác để công tác giao hàng được nhanh nhất.
 
