--- a/halo/template/camera-hub.pug
+++ b/halo/template/camera-hub.pug
@@ -79,11 +79,11 @@ block content
     h1.section__header HOT SALE
 
     .slider-row.slider
-      include parts/card.pug
-      include parts/card.pug
-      include parts/card.pug
-      include parts/card.pug
-      include parts/card.pug
+      include parts/card-1.pug
+      include parts/card-2.pug
+      include parts/card-3.pug
+      include parts/card-4.pug
+      include parts/card-5.pug
 
     a.btn.btn--dark.hub-row__btn(href="#") Xem toàn bộ 
 
@@ -91,11 +91,11 @@ block content
     h1.section__header BÁN CHẠY
 
     .slider-row.slider
-      include parts/card.pug
-      include parts/card.pug
-      include parts/card.pug
-      include parts/card.pug
-      include parts/card.pug
+      include parts/card-1.pug
+      include parts/card-2.pug
+      include parts/card-3.pug
+      include parts/card-4.pug
+      include parts/card-5.pug
 
     a.btn.btn--dark.hub-row__btn(href="#") Xem toàn bộ 
 
@@ -103,11 +103,11 @@ block content
     h1.section__header ĐÁNH GIÁ TỐT
 
     .slider-row.slider
-      include parts/card.pug
-      include parts/card.pug
-      include parts/card.pug
-      include parts/card.pug
-      include parts/card.pug
+      include parts/card-1.pug
+      include parts/card-2.pug
+      include parts/card-3.pug
+      include parts/card-4.pug
+      include parts/card-5.pug
 
     a.btn.btn--dark.hub-row__btn(href="#") Xem toàn bộ 
 
