--- a/halo/template/parts/footer.pug
+++ b/halo/template/parts/footer.pug
@@ -1,4 +1,4 @@
-footer.dark-side 
+footer.dark-side#footer 
   .container.px-sm-5.mw-600.d-flex.flex-column.justify-content-center.align-items-center
     img.footer__logo(src="img/img--misc/logo-white.png", alt="")  
 
