--- a/halo/template/details.pug
+++ b/halo/template/details.pug
@@ -355,7 +355,7 @@ block content
       h2.details__sub-header Sản phẩm đi kèm khuyên dùng
 
       .recommend__wrapper
-        include parts/card.pug
-        include parts/card.pug
+        include parts/card-1.pug
+        include parts/card-2.pug
 
 
