--- a/halo/template/dslr-hub.pug
+++ b/halo/template/dslr-hub.pug
@@ -126,15 +126,15 @@ block content
             span Khuyến mại
 
       .main-area__items-area
-        include parts/card.pug
-        include parts/card.pug
-        include parts/card.pug
-        include parts/card.pug
-        include parts/card.pug
-        include parts/card.pug
-        include parts/card.pug
-        include parts/card.pug
-        include parts/card.pug
+        include parts/card-1.pug
+        include parts/card-2.pug
+        include parts/card-3.pug
+        include parts/card-4.pug
+        include parts/card-5.pug
+        include parts/card-1.pug
+        include parts/card-2.pug
+        include parts/card-3.pug
+        include parts/card-4.pug
 
       ul.main-area__pagination.pagination
         li.page-item.active
