--- a/halo/template/payment.pug
+++ b/halo/template/payment.pug
@@ -67,7 +67,8 @@ block content
           .faq__item 
             p.faq__item--question(data-toggle="collapse" data-target="#answer1") 
               span Chi phí vận chuyển tính như thế nào?
-              span +
+              span 
+                i.fas.fa-plus
             ul#answer1.faq__item--answer.collapse
               li - Với các đơn hàng có bao gồm sản phẩm máy ảnh và ống kính bất kỳ: HALO sẽ miễn phí vận chuyển, áp dụng trên phạm vi toàn quốc.
               li - Với các đơn hàng chỉ bao gồm phụ kiện: HALO sẽ miễn phí vận chuyển với các đơn hàng có tổng giá từ 500.000đ trở lên, áp dụng trên phạm vi toàn quốc.
@@ -76,7 +77,8 @@ block content
           .faq__item 
             p.faq__item--question(data-toggle="collapse" data-target="#answer2") 
               span Thời gian giao hàng là bao lâu?
-              span +
+              span 
+                i.fas.fa-plus
             ul#answer2.faq__item--answer.collapse 
               li - Hà Nội, TP.HCM: Giao hàng trong vòng 2 ngày
               li - Các khu vực khác: Giao hàng trong vòng 2 - 5 ngày
@@ -84,7 +86,8 @@ block content
           .faq__item 
             p.faq__item--question(data-toggle="collapse" data-target="#answer3") 
               span Tôi có thể lấy mã giảm giá từ đâu?
-              span +
+              span 
+                i.fas.fa-plus
             ul#answer3.faq__item--answer.collapse 
               li - Theo dõi các chương trình tặng mã giảm giá trên các nền tảng xã hội của HALO như&nbsp;  
                 a(href="#") Facebook&nbsp; 
@@ -97,16 +100,17 @@ block content
           .faq__item 
             p.faq__item--question(data-toggle="collapse" data-target="#answer4") 
               span Wait, the Earth is flat?
-              span -
+              span 
+                i.fas.fa-minus
             ul#answer4.faq__item--answer.collapse.show 
-              li - Always has been.
+              li.font-weight-bold - Always has been.
 
-          h3 Các câu hỏi khác cần tư vấn, vui lòng liên hệ hotline: 012.345.6789
+          h3.text-center Các câu hỏi khác cần tư vấn, vui lòng liên hệ hotline: 012.345.6789
 
         p.term-toggler__wrapper.text-center Khi bấm xác nhận, quý khách đã đồng ý với 
-          span.term-toggler.text-primary.font-italic(data-toggle="collapse" data-target="#term") các điều khoản đặt hàng và thanh toán của chúng tôi.
+          span.term-toggler.text-primary.font-italic(data-toggle="collapse" data-target=".confirmation__term") các điều khoản đặt hàng và thanh toán của chúng tôi.
 
-        .confirmation__term#term.sub-section.collapse
+        .confirmation__term.sub-section.collapse
           h2.sub-header Điều khoản đặt hàng và thanh toán
           p 1. Quý khách hàng vui lòng cung cấp địa chỉ giao hàng cũng như thông tin người nhận rõ ràng, chính xác để công tác giao hàng được nhanh nhất.
 
@@ -116,7 +120,7 @@ block content
 
           p 4. Trường hợp Quý khách hàng thay đổi quyết định mua hàng khi sản phẩm đã được giao, khách hàng sẽ phải chịu hoàn toàn chi phí vận chuyển.
 
-        a.btn.btn--confirmation.payment__toggler(href="#payment__header" data-toggle="collapse" data-target="#payment__info") Xác nhận
+        a.btn.btn--confirmation.payment__toggler(href="#" data-toggle="collapse" data-target="#payment__info") Xác nhận
 
     section.payment-wrapper
 
@@ -132,7 +136,7 @@ block content
             input.guess__info--name.form-control(type="text" placeholder="Họ tên")
             input.guess__info--phone.form-control(type="text" placeholder="Số điện thoại")
             input.guess__info--address.form-control(type="text" placeholder="Địa chỉ nhận hàng")
-            textarea.guess__info--note.form-control(name="" cols="20" rows="10" placeholder="Ghi chú")
+            textarea.guess__info--note.form-control(name="" cols="20" rows="5" placeholder="Ghi chú")
 
           a.btn.btn--confirmation.payment__toggler(href="#method-wrapper" data-toggle="collapse" data-target="#payment__method") Xác nhận 
 
