--- a/halo/css/dslr-hub.css
+++ b/halo/css/dslr-hub.css
@@ -41,6 +41,7 @@
 
 .sub-filter {
   border: 1px solid #C4C4C4;
+  font-size: 10px;
   border-radius: 8px;
   padding: 5px;
   cursor: pointer;
@@ -122,7 +123,7 @@
 }
 
 .old-price {
-  font-size: 16px;
+  font-size: 12px;
   text-decoration: line-through;
 }
 
@@ -132,7 +133,7 @@
 }
 
 .sale-amount {
-  font-size: 13px;
+  font-size: 10px;
 }
 
 /* ---------- .main-area__pagination ---------- */
@@ -269,7 +270,7 @@
   }
 
   .technical-filter--max__filter-group li {
-    padding: 5px 30px;
+    padding: 5px 15px;
     font-size: 12px;
     border-bottom: 1px solid #BFBFBF;
   }
@@ -394,7 +395,6 @@
   }
 
   .technical-filter--max__filter-group li {
-    padding: 7px 30px;
     font-size: 14px;
   }
 
@@ -461,7 +461,14 @@
     width: 280px;
     max-width: 280px;
     margin: 15px;
+  }
 
+  .old-price {
+    font-size: 16px;
+  }
+
+  .sale-amount {
+    font-size: 13px;
   }
 
 }
