--- a/halo/template/parts/header.pug
+++ b/halo/template/parts/header.pug
@@ -22,7 +22,7 @@ header
           li.nav-item
             a.nav-link.py-3.px-md-3(href='camera-hub.html') Phụ kiện
           li.nav-item
-            a.nav-link.py-3.px-md-3(href='review-hub.html') Đánh giá
+            a.nav-link.py-3.px-md-3(href='review.html') Đánh giá
           li.nav-item.display-till-md.log-min
             a.nav-link.py-3(href='#' data-toggle='modal' data-target='#logreg') Đăng nhập/Đăng ký
 
