--- a/halo/template/review.pug
+++ b/halo/template/review.pug
@@ -7,4 +7,8 @@ block css
 block title
   title HALO Đánh giá
 
-block content 
+block content
+  .review__main-banner
+
+  section.review__sub-banner 
+    a
