--- a/halo/css/review.css
+++ b/halo/css/review.css
@@ -3,3 +3,11 @@
   padding-bottom: 0px !important;
   border-bottom: 2px solid white;
 }
+
+.review__main-banner {
+  background-image: url(/halo/img/img--review/review-banner.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 200px;
+}
