--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -116,34 +116,34 @@ block content
       button.btn.btn--dark.seemore-btn.mx-auto(type='button') Xem thêm
 
   section.review.dark-side
-    .container-xl.px-sm-5.px-xl-0.mw-900
+    .container-xl.px-sm-5.mw-900
       h1 HALO review
 
-      a.review-item.d-flex(href="")
+      a.review-item.d-flex(href="review.html")
         img.review-item__img(src="img/img--misc/review-img-v2.png", alt="")
 
-        .review-item__content.w-100.d-flex.flex-column.justify-content-between
+        .review-item__content.d-flex.flex-column.justify-content-between
           .review-header.d-flex.flex-wrap.align-items-start.align-content-start
-            h2.w-100 Top 5 DSLR đáng mua năm 2021
+            h2.w-100.font-weight-bold Top 5 DSLR đáng mua năm 2021
             p.subtext.font-italic.font-weight-light Trung Đức
             p.subtext.font-italic.font-weight-light
-              i.far.fa-clock.mx-1.mx-sm-2 
+              i.far.fa-clock.mx-2
               | 01/01/2021
-          p.review-preview.hidden-till-sm Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.
+          p.review-preview Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.
       
-      a.review-item.d-flex(href="#")
+      a.review-item.d-flex(href="review.html")
         img.review-item__img(src="img/img--misc/review-img-v2.png", alt="")
         
-        .review-item__content.w-100.d-flex.flex-column.justify-content-between
+        .review-item__content.d-flex.flex-column.justify-content-between
           .review-header.d-flex.flex-wrap.align-items-start.align-content-start
-            h2.w-100 Top 5 DSLR đáng mua năm 2021
+            h2.w-100.font-weight-bold Top 5 DSLR đáng mua năm 2021
             p.subtext.font-italic.font-weight-light Trung Đức
             p.subtext.font-italic.font-weight-light 
-              i.far.fa-clock.mx-1.mx-sm-2 
+              i.far.fa-clock.mx-2
               | 01/01/2021
-          p.review-preview.hidden-till-sm Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. 
+          p.review-preview Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. 
 
-      button.btn.btn--light.seemore-btn.mx-auto(type='button') Xem thêm        
+      a.btn.btn--light.seemore-btn.mx-auto(href="review.html") Xem thêm        
 
   section.connection
 
@@ -159,5 +159,5 @@ block content
         a.socials__item.d-block(href="#")
           img(src="img/img--misc/social-insta.png", alt="")
         a.socials__item.d-block(href="#")
-          img(src="img/img--misc/social-twitter.png", alt="")
+          img.h-100(src="img/img--misc/social-twitter.png", alt="")
 
