--- a/halo/template/review.pug
+++ b/halo/template/review.pug
@@ -12,8 +12,8 @@ block content
     img.main-banner__logo(src="img/img--misc/logo-white.png", alt="")
     img.main-banner__text(src="img/img--review/banner-text.png", alt="")
 
-  section
-    #sub-banner-area--min.carousel.slide.display-till-md(data-ride='carousel' data-touch='true')
+  section.display-till-md
+    #sub-banner-area--min.carousel.slide(data-ride='carousel' data-touch='true')
 
       ul.carousel-indicators
         li.active(data-target='#sub-banner-area--min' data-slide-to='0')
@@ -24,7 +24,7 @@ block content
         .carousel-item.active
           img(src='/halo/img/img--review/sub-banner-big--min.jpg' alt='')
           .carousel-caption
-            h3 Nikon Z7 Review: 
+            h3 Nikon Z7 Review:&nbsp; 
             p Canh bạc cho tương lai của Nikon
         .carousel-item
           img(src='img/img--review/review-sub-banner-1.png' alt='')
@@ -35,20 +35,8 @@ block content
         span.carousel-control-prev-icon
       a.carousel-control-next(href='#sub-banner-area--min' data-slide='next')
         span.carousel-control-next-icon
-
-
-  section#sub-banner-area--max.hidden-till-md
-    a.review__sub-banner--big(href="#")
-      span Nikon Z7 Review: 
-      span Canh bạc cho tương lai của Nikon
-
-    a.review__sub-banner--small(href="")
-      img(src="img/img--review/review-sub-banner-1.png", alt="") 
-
-    a.review__sub-banner--small(href="")
-      img(src="img/img--review/review-sub-banner-2.png", alt="") 
     
-  section.review__sub-banner-area.review.hidden-till-md
+  section#sub-banner-area--max.container-xl.hidden-till-md
 
     a.review__sub-banner--big(href="#")
       span Nikon Z7 Review: 
@@ -60,4 +48,25 @@ block content
 
       a.review__sub-banner--small(href="")
         img(src="img/img--review/review-sub-banner-2.png", alt="") 
+
+  section.main-area.container-xl
+    .review__post-area
+      include parts/review-post.pug
+      include parts/review-post.pug
+      include parts/review-post.pug
+      button.btn.seemore-btn.btn--dark Xem thêm
+
+    aside.review__aside-area.hidden-till-md
+      h3.aside__header Đọc nhiều nhất
+      a.aside__post.d-block(href="")
+        img.aside__post--img(src="img/img--review/aside-img-v2.jpg", alt="")
+        p.aside__post--header Vị thế hiện tại của 2 ông lớn Ca-Ni
+
+      a.aside__post.d-block(href="")
+        img.aside__post--img(src="img/img--review/aside-img-v2.jpg", alt="")
+        p.aside__post--header Vị thế hiện tại của 2 ông lớn Ca-Ni
+
+      a.aside__post.d-block(href="")
+        img.aside__post--img(src="img/img--review/aside-img-v2.jpg", alt="")
+        p.aside__post--header Vị thế hiện tại của 2 ông lớn Ca-Ni
     
